api call done and make style responsive using media query

--- a/index.html
+++ b/index.html
@@ -15,31 +15,7 @@
       <button id="jokeBtn" class="btn"><h2>Next joke</h2></button>
       <script src="index.js"></script>
     </div>
-    <script>
-      const jokeElm = document.getElementById("joke");
-      const jokeBtn = document.getElementById("jokeBtn");
-      const loading=document.getElementById('loading');
-
-      jokeBtn.addEventListener('click',genrateJoke)
-      genrateJoke();
-      function genrateJoke() {
-        loading.style.display='block';
-        jokeElm.style.display="none";
-        const config = {
-          headers: {
-            Accept: " application/json ",
-          },
-        };
-        fetch("https://icanhazdadjoke.com", config)
-          .then((respone) => respone.json())
-          .then((data) =>{
-            jokeElm.innerHTML=data.joke
-            console.log(data)
-            loading.style.display="none";
-            jokeElm.style.display="block";
-            
-          });
-      }
-    </script>
+    <script src="index.js"></script>
+    
   </body>
 </html>
